# pdf-context-manager

./: .gitignore  README.md  main.py  pyproject.toml
pdf_context_manager/: __init__.py  context_builder.py  document.py  query_engine.py
